@@ -9,16 +9,11 @@
       </df>
     </df>
     <df root="src" name="1">
+      <in>Image.cpp</in>
+      <in>Main.cpp</in>
       <in>WXCanvas.cpp</in>
+      <in>WXWindow.cpp</in>
     </df>
-    <logicalFolder name="src" displayName="src" projectFiles="true" root="src">
-      <itemPath>src/GLUTWindow.h</itemPath>
-      <itemPath>src/IWindow.h</itemPath>
-      <itemPath>src/Main.cpp</itemPath>
-      <itemPath>src/Main.h</itemPath>
-      <itemPath>src/WXWindow.cpp</itemPath>
-      <itemPath>src/WXWindow.h</itemPath>
-    </logicalFolder>
     <logicalFolder name="ExternalFiles"
                    displayName="Important Files"
                    projectFiles="false"
@@ -70,16 +65,6 @@
           <preprocessorList>
             <Elem>DEBUG</Elem>
             <Elem>TARGET_WX</Elem>
-            <Elem>_DEBUG</Elem>
-          </preprocessorList>
-        </ccTool>
-      </folder>
-      <folder path="src">
-        <ccTool>
-          <preprocessorList>
-            <Elem>DEBUG</Elem>
-            <Elem>TARGET_WX</Elem>
-            <Elem>_DEBUG</Elem>
           </preprocessorList>
         </ccTool>
       </folder>
@@ -93,6 +78,10 @@
       </item>
       <item path="inc/wx/thrimpl.cpp" ex="false" tool="1" flavor2="11">
         <ccTool flags="1">
+        </ccTool>
+      </item>
+      <item path="src/Image.cpp" ex="false" tool="1" flavor2="8">
+        <ccTool flags="0">
         </ccTool>
       </item>
       <item path="src/Main.cpp" ex="false" tool="1" flavor2="8">
