@@ -1,3 +1,4 @@
-C:/Users/Jester/Documents/SVN/Github/JFVGL/JFVGL/src/WXCanvas.cpp=C:/Users/Jester/Documents/SVN/Github/JFVGL/JFVGL#-std=c++11 -Wall -Wpedantic -Iinc -D_DEBUG -DTARGET_WX -DDEBUG -c src/wxCanvas.cpp -oobj/wxCanvas.o
-C:/Users/Jester/Documents/SVN/Github/JFVGL/JFVGL/src/WXWindow.cpp=C:/Users/Jester/Documents/SVN/Github/JFVGL/JFVGL#-std=c++11 -Wall -Wpedantic -Iinc -D_DEBUG -DTARGET_WX -DDEBUG -c src/wxWindow.cpp -oobj/wxWindow.o
-C:/Users/Jester/Documents/SVN/Github/JFVGL/JFVGL/src/Main.cpp=C:/Users/Jester/Documents/SVN/Github/JFVGL/JFVGL#-std=c++11 -Wall -Wpedantic -Iinc -D_DEBUG -DTARGET_WX -DDEBUG -c src/Main.cpp -oobj/Main.o
+C:/Users/Jester/Documents/SVN/Github/JFVGL/JFVGL/src/WXCanvas.cpp=C:/Users/Jester/Documents/SVN/Github/JFVGL/JFVGL#-std=c++11 -Wall -Wpedantic -Iinc -DTARGET_WX -DDEBUG -c src/wxCanvas.cpp -oobj/wxCanvas.o
+C:/Users/Jester/Documents/SVN/Github/JFVGL/JFVGL/src/WXWindow.cpp=C:/Users/Jester/Documents/SVN/Github/JFVGL/JFVGL#-std=c++11 -Wall -Wpedantic -Iinc -DTARGET_WX -DDEBUG -c src/wxWindow.cpp -oobj/wxWindow.o
+C:/Users/Jester/Documents/SVN/Github/JFVGL/JFVGL/src/Image.cpp=C:/Users/Jester/Documents/SVN/Github/JFVGL/JFVGL#-std=c++11 -Wall -Wpedantic -Iinc -DTARGET_WX -DDEBUG -c src/Image.cpp -oobj/Image.o
+C:/Users/Jester/Documents/SVN/Github/JFVGL/JFVGL/src/Main.cpp=C:/Users/Jester/Documents/SVN/Github/JFVGL/JFVGL#-std=c++11 -Wall -Wpedantic -Iinc -DTARGET_WX -DDEBUG -c src/Main.cpp -oobj/Main.o
